Ok, noooooow the plugin works :3

--- a/BPScript.uplugin
+++ b/BPScript.uplugin
@@ -20,8 +20,8 @@
 	[
 		{
 			"Name" : "BPScript",
-			"Type" : "Editor",
-			"LoadingPhase" : "PostEngineInit"
+			"Type" : "Program",
+			"LoadingPhase" : "PostConfigInit"
 		}
 	]
 }
